--- a/Day4B_Assignment/Day4B_Assignment.csproj
+++ b/Day4B_Assignment/Day4B_Assignment.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArrayCount.cs" />
+    <Compile Include="FrequencyOfArray.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UniqueElement.cs" />
