--- a/Day4B_Assignment/Day4B_Assignment.csproj
+++ b/Day4B_Assignment/Day4B_Assignment.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="ArrayCount.cs" />
     <Compile Include="FrequencyOfArray.cs" />
+    <Compile Include="MinMax.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UniqueElement.cs" />
