[Mansi]: Program to print given pattern

--- a/Day4B_Assignment/Day4B_Assignment.csproj
+++ b/Day4B_Assignment/Day4B_Assignment.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ArrayCount.cs" />
     <Compile Include="FrequencyOfArray.cs" />
     <Compile Include="MinMax.cs" />
+    <Compile Include="Pattern.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UniqueElement.cs" />
