--- a/Day4B_Assignment/Day4B_Assignment.csproj
+++ b/Day4B_Assignment/Day4B_Assignment.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Pattern.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReverseString.cs" />
     <Compile Include="UniqueElement.cs" />
   </ItemGroup>
   <ItemGroup>
