--- a/Day4B_Assignment/Day4B_Assignment.csproj
+++ b/Day4B_Assignment/Day4B_Assignment.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReverseString.cs" />
+    <Compile Include="SumOfDigits.cs" />
     <Compile Include="UniqueElement.cs" />
   </ItemGroup>
   <ItemGroup>
